kustomize/overlays/prod/deployment-crossplane-postgresql-aws.yaml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: cncf-demo
spec:
  template:
    spec:
      containers:
        - name: main
