kustomize/overlays/prod/deployment-otel.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cncf-demo
spec:
  template:
    spec:
      containers:
        - image: otel/autoinstrumentation-go
          name: instrumentation
          securityContext:
            privileged: true
            runAsUser: 0
      shareProcessNamespace: true
