kustomize/overlays/prod/deployment-scaled.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cncf-demo
spec:
  replicas: 3
